src/App.css
/* Light Mode */
body {
  background-color: white;
  color: black;
  transition: background 0.3s, color 0.3s;
}

/* Dark Mode */
body.dark-mode {
  background-color: #252525;
  color: white;
  transition: background 0.3s, color 0.3s;
}

body.dark-mode .card {
  background-color: rgba(255, 255, 255, 0.1);
  box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
}

body.dark-mode .header .logo {
  color: white;
}

body.dark-mode nav a {
  color: white;
}

p {
  line-height: 1.7rem;
}

/* Toggle Button */
.theme-toggle {
  background: none;
  border: none;
  font-size: 1.2rem;
  cursor: pointer;
  color: inherit;
}

.theme-toggle:hover {
  opacity: 0.7;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#root, .App {
  display: flex;
  flex-direction: column;
  min-height: 100vh; 
}

.main-content {
  flex: 1; 
}

.side-content {
  flex: 1; 
  text-align: left;
  padding-left: 20px;
}

.title {
  margin-bottom: 5px;
}

.info {
  margin-top: 10px;
}

.link {
  margin-top: 10px;
  color: #E42535;
  text-decoration: none;
  line-height: 1.5rem;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: #61dafb;
}

/* Body Styling */
body {
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}

/* Dark mode styles */
.dark-mode {
  background-color: #252525; 
  color: #ffffff;
  transition: background 0.3s, color 0.3s;
}

/* Light mode styles */
body {
  background-color: #ffffff; 
  color: #000000;
  transition: background 0.3s, color 0.3s;
}

/* Scrollbar for both light and dark mode */
::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: #888; 
  border-radius: 10px;
  padding: 6px;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #555; 
}

.dark-mode ::-webkit-scrollbar-thumb {
  background-color: #555; 
}

.dark-mode ::-webkit-scrollbar-thumb:hover {
  background-color: #333;
}

.scrollable {
  max-height: 300px;
  overflow-y: scroll;
}


@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.App {
  text-align: center;
  font-family: Arial, sans-serif;
}

.search-filter {
  margin: 20px;
}

.search-filter input {
  padding: 8px;
  font-size: 16px;
  border-radius: 5px;
  border: 1px solid #ccc;

}

.search-filter button {
  padding: 8px 16px;
  font-size: 16px;
}

.button {
  background-color: #E42535;
  color: white;
  border: none;
  padding: 10px 20px;
  margin: 0 0 0 10px;
  border-radius: 5px;
  cursor: pointer;
}


@media (max-width: 768px) {
  .card-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 480px) {
  .card-container {
    grid-template-columns: 1fr; 
  }
}

/* Card Styling */
.card {
  background-color: rgba(0, 0, 0, 1);
  border-radius: 14px;
  overflow: hidden;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
  text-align: center;
  width: 316px;
  height: 442px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.card img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.card-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr); 
  gap: 20px;
  padding: 20px;
  justify-items: center;
  max-width: 1028px; 
  margin: 0 auto;
}

.binder-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr); 
  grid-template-rows: repeat(3, 1fr); 
  gap: 10px;
  margin: 20px auto;
  max-width: 960px; 
  justify-content: center;
}

.binder-slot {
  width: 100%;
  height: auto;
  padding-bottom: 141.5%; 
  border: 2px dashed gray;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  border-radius: 14px;
  position: relative;
}

body.dark-mode .binder-slot {
  width: 100%;
  height: auto;
  padding-bottom: 141.5%; 
  border: 2px dashed gray;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #252525;
  border-radius: 14px;
  position: relative;
}

.binder-slot img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  cursor: pointer;
}

.empty-slot {
  font-size: 24px;
  color: gray;
  cursor: pointer;
  position: absolute; 
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
}

/* Responsive Design */
@media (max-width: 768px) {
  .card-container {
    grid-template-columns: 1fr; 
    gap: 15px; 
    padding: 10px;
    margin-top: 20px; 
  }

  .binder-container {
    grid-template-columns: repeat(3, 1fr); 
    gap: 10px; 
    padding: 10px;
  }

  .binder-slot {
    padding-bottom: 141.5%;
    height: auto;
  }
}

@media (max-width: 480px) {
  .card-container {
    grid-template-columns: 1fr; 
    gap: 20px;
    padding: 5px 5px 30px;
    margin-top: 20px; 
  }

  .binder-container {
    grid-template-columns: repeat(3, 1fr); 
  }

  .binder-slot img {
    object-fit: contain;
  }
}

/* Popup styling */
.popup {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.popup-content {
  background-color: white;
  padding: 20px;
  border-radius: 8px;
  text-align: center;
  width: 300px;
}

.popup h3 {
  margin-bottom: 20px;
}

.popup ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.popup ul li {
  padding: 10px;
  cursor: pointer;
  font-size: 18px;
  border-bottom: 1px solid #ddd;
}

.popup ul li:hover {
  background-color: #f1f1f1;
}

.popup-buttons {
  margin-top: 15px;
}

.close-btn, .confirm-btn {
  padding: 10px;
  margin: 10px;
  background-color: #333;
  color: white;
  border: none;
  cursor: pointer;
  border-radius: 5px;
}

.close-btn:hover, .confirm-btn:hover {
  background-color: #555;
}

